package org.example.etapas;

public enum TipoEtapa {
    APLICADO,
    ENTREVISTA,
    PRUEBA_TECNICA,
    OFERTA,
    VERIFICACION_REFERENCIAS,
    CONTRATADO,
    RECHAZADO
}
