package org.example.notificaciones;

public interface CanalNotificacion {
    void enviar(String destino, String mensaje);
}


