package org.example.notificaciones;


public interface ObservadorCandidato {
    void notificar(EventoCambioEtapa evento);
}
