@startuml uml-hirecore
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam nodesep 25
skinparam ranksep 45
hide empty members
left to right direction

package dominio {
  class Candidato {
    - id : String
    - nombre : String
    - reclutadorEmail : String
    - etapaActual : Etapa
    + Candidato(id : String, nombre : String, reclutadorEmail : String, etapaInicial : Etapa)
    + getId() : String
    + getNombre() : String
    + getReclutadorEmail() : String
    + getEtapaActual() : Etapa
    + setEtapaActual(etapaActual : Etapa) : void
    + guardarEstado() : CandidatoMemento
    + restaurarEstado(memento : CandidatoMemento) : void
  }
}

package etapas {
  enum TipoEtapa {
    APLICADO
    ENTREVISTA
    PRUEBA_TECNICA
    OFERTA
    VERIFICACION_REFERENCIAS
    CONTRATADO
    RECHAZADO
  }

  interface Etapa {
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }

  class EtapaAplicado {
    - destinos : Set<TipoEtapa>
    + EtapaAplicado(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaEntrevista {
    - destinos : Set<TipoEtapa>
    + EtapaEntrevista(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaPruebaTecnica {
    - destinos : Set<TipoEtapa>
    + EtapaPruebaTecnica(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaOferta {
    - destinos : Set<TipoEtapa>
    + EtapaOferta(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaVerificacionReferencias {
    - destinos : Set<TipoEtapa>
    + EtapaVerificacionReferencias(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaContratado {
    - destinos : Set<TipoEtapa>
    + EtapaContratado(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }
  class EtapaRechazado {
    - destinos : Set<TipoEtapa>
    + EtapaRechazado(destinos : Set<TipoEtapa>)
    + getTipoEtapa() : TipoEtapa
    + puedePasarA(destino : TipoEtapa) : boolean
  }

  class FabricaEtapas {
    - {static} TRANSICIONES : Map<TipoEtapa, Set<TipoEtapa>>
    - etapas : Map<TipoEtapa, Etapa>
    + FabricaEtapas()
    - registrar(etapa : Etapa) : void
    - {static} destinosDe(tipo : TipoEtapa) : Set<TipoEtapa>
    + obtener(tipo : TipoEtapa) : Etapa
  }
}

package comandos {
  interface Comando {
    + ejecutar() : void
    + deshacer() : void
    + auditoria() : String
  }

  class ComandoAvanzarEtapa {
    - candidato : Candidato
    - nuevaEtapa : Etapa
    - usuario : String
    - fecha : LocalDateTime
    - publicador : PublicadorEventos
    - esNotaInterna : boolean
    - memento : CandidatoMemento
    + ComandoAvanzarEtapa(candidato : Candidato, nuevaEtapa : Etapa, usuario : String, fecha : LocalDateTime, publicador : PublicadorEventos, esNotaInterna : boolean)
    + ejecutar() : void
    + deshacer() : void
    + auditoria() : String
  }

  class CandidatoMemento {
    - etapa : Etapa
    + CandidatoMemento(etapa : Etapa)
    + getEtapa() : Etapa
  }

  class HistorialComandos {
    - pila : Deque<Comando>
    - bitacora : List<String>
    + registrar(comando : Comando) : void
    + deshacerUltimo() : void
    + getHistorial() : List<String>
  }
}

package gestor {
  class GestorDeCandidato {
    - fabrica : FabricaEtapas
    - publicador : PublicadorEventos
    - historial : HistorialComandos
    + GestorDeCandidato(fabrica : FabricaEtapas, publicador : PublicadorEventos, historial : HistorialComandos)
    + avanzarEstado(candidato : Candidato, tipoDestino : TipoEtapa, usuario : String) : void
    + avanzarEstado(candidato : Candidato, tipoDestino : TipoEtapa, usuario : String, esNotaInterna : boolean) : void
    + deshacerUltimaTransicion() : void
  }

  class TransicionInvalidaException {
    + TransicionInvalidaException(mensaje : String)
  }
}

class RuntimeException <<java.lang>>

package notificaciones {
  interface ObservadorCandidato {
    + notificar(evento : EventoCambioEtapa) : void
  }
  interface CanalNotificacion {
    + enviar(destino : String, mensaje : String) : void
  }

  class PublicadorEventos {
    - observadores : List<ObservadorCandidato>
    + suscribir(observador : ObservadorCandidato) : void
    + publicar(evento : EventoCambioEtapa) : void
  }

  class EventoCambioEtapa {
    - candidato : Candidato
    - etapaAnterior : TipoEtapa
    - etapaNueva : TipoEtapa
    - esNotaInterna : boolean
    + EventoCambioEtapa(candidato : Candidato, etapaAnterior : TipoEtapa, etapaNueva : TipoEtapa, esNotaInterna : boolean)
    + getCandidato() : Candidato
    + getEtapaAnterior() : TipoEtapa
    + getEtapaNueva() : TipoEtapa
    + isNotaInterna() : boolean
  }

  class ObservadorReclutador {
    - canal : CanalNotificacion
    + ObservadorReclutador(canal : CanalNotificacion)
    + notificar(evento : EventoCambioEtapa) : void
  }
  class ObservadorGerente {
    - canal : CanalNotificacion
    + ObservadorGerente(canal : CanalNotificacion)
    + notificar(evento : EventoCambioEtapa) : void
  }
  class ObservadorNomina {
    - canal : CanalNotificacion
    + ObservadorNomina(canal : CanalNotificacion)
    + notificar(evento : EventoCambioEtapa) : void
  }
  class ObservadorPortalCandidato {
    - canal : CanalNotificacion
    + ObservadorPortalCandidato(canal : CanalNotificacion)
    + notificar(evento : EventoCambioEtapa) : void
  }

  class CanalEmail {
    + enviar(destino : String, mensaje : String) : void
  }
  class CanalPortal {
    + enviar(destino : String, mensaje : String) : void
  }
}

class Main {
  + {static} main(args : String[]) : void
}

Etapa <|.. EtapaAplicado
Etapa <|.. EtapaEntrevista
Etapa <|.. EtapaPruebaTecnica
Etapa <|.. EtapaOferta
Etapa <|.. EtapaVerificacionReferencias
Etapa <|.. EtapaContratado
Etapa <|.. EtapaRechazado
Etapa ..> TipoEtapa
FabricaEtapas ..> TipoEtapa

Comando <|.. ComandoAvanzarEtapa
ObservadorCandidato <|.. ObservadorReclutador
ObservadorCandidato <|.. ObservadorGerente
ObservadorCandidato <|.. ObservadorNomina
ObservadorCandidato <|.. ObservadorPortalCandidato
CanalNotificacion <|.. CanalEmail
CanalNotificacion <|.. CanalPortal
RuntimeException <|-- TransicionInvalidaException

FabricaEtapas *-- "7" Etapa
Candidato o-- "1" Etapa
CandidatoMemento o-- "1" Etapa
HistorialComandos o-- "*" Comando

GestorDeCandidato o-- "1" FabricaEtapas
GestorDeCandidato o-- "1" PublicadorEventos
GestorDeCandidato o-- "1" HistorialComandos
GestorDeCandidato ..> Candidato
GestorDeCandidato ..> TipoEtapa
GestorDeCandidato ..> ComandoAvanzarEtapa
GestorDeCandidato ..> Comando
GestorDeCandidato ..> Etapa

ComandoAvanzarEtapa o-- "1" Candidato
ComandoAvanzarEtapa o-- "1" Etapa
ComandoAvanzarEtapa o-- "1" PublicadorEventos
ComandoAvanzarEtapa *-- "0..1" CandidatoMemento
ComandoAvanzarEtapa ..> EventoCambioEtapa
ComandoAvanzarEtapa ..> TransicionInvalidaException

Candidato ..> CandidatoMemento
PublicadorEventos o-- "*" ObservadorCandidato
PublicadorEventos ..> EventoCambioEtapa
EventoCambioEtapa o-- "1" Candidato
EventoCambioEtapa ..> TipoEtapa
FabricaEtapas ..> TipoEtapa

ObservadorReclutador o-- "1" CanalNotificacion
ObservadorGerente o-- "1" CanalNotificacion
ObservadorNomina o-- "1" CanalNotificacion
ObservadorPortalCandidato o-- "1" CanalNotificacion
ObservadorGerente ..> TipoEtapa
ObservadorNomina ..> TipoEtapa

Main ..> GestorDeCandidato
Main ..> FabricaEtapas
Main ..> HistorialComandos
Main ..> PublicadorEventos
Main ..> Candidato
Main ..> TipoEtapa
Main ..> CanalNotificacion
Main ..> CanalEmail
Main ..> CanalPortal
Main ..> ObservadorReclutador
Main ..> ObservadorGerente
Main ..> ObservadorNomina
Main ..> ObservadorPortalCandidato
@enduml
